# ms_delta

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: ms_delta.cpp
